--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+.header-img {
+  border-radius: 10px;
+  width: 400px;
+  height: 600px;
+  background-position: 81.5%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("/public/static/img/hero-img.jpeg");
+}
+
+.header-img-overlay {
+  background: linear-gradient(
+    154.91deg,
+    rgba(174, 89, 9, 0.48) 2.62%,
+    rgba(91, 48, 7, 0.3168) 102.51%
+  );
+  mix-blend-mode: overlay;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.smm {
+  background-image: url("/public/static/img/SMM.jpg");
+  height: 500px;
+}
+
+.ptw {
+  background-image: url("/public/static/img/ptw.jpeg");
+  height: 500px;
+}
