--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,10 @@ body {
   line-height: var(--bs-body-line-height);
   margin: 0;
   text-align: var(--bs-body-text-align);
+  
+}
+body, html {
+  scroll-behavior: smooth;
 }
 hr {
   background-color: currentColor;
